<resources>
    <string name="current_language">English</string>
    <string name="delete">Delete</string>
    <string name="delete_confirmation">Do you really want to delete %s ?</string>
    <string name="raz_confirmation">Do you really want to reset the form?</string>
    <string name="form_name">Form Name</string>
    <string name="form_name_description">Please write the name of this form</string>
    <string name="fail">Fail</string>
    <string name="delete_old_forms">You have some former patterns and un-finished forms. Would you like to delete them ?</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="back">Previous</string>
    <string name="finish">Finish</string>
    <string name="save">Save</string>
    <string name="submit">OK</string>
    <string name="no_downloaded_forms">No downloaded form template</string>
    <string name="empty_list">empty list</string>
    <string name="instances_exist">versions of this pattern already exist!</string>
    <string name="instance_exist">1 version of this pattern already exists!</string>
    <string name="hierarchy_text">Here is the summary of the survey:</string>
    <string name="textview_about_us1">The mobile application "Makina Collect" was developed by Makina Corpus</string>
    <string name="language">Language</string>
    <string name="language_preferences">language_preferences</string>
    <string name="theme">Theme</string>
    <string name="theme_preferences">theme_preferences</string>
    <string name="theme1">Dark theme</string>
    <string name="theme2">Light theme</string>
    <string name="luminosity">Luminosity</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about_us">About us</string>
    <string name="exit">Exit</string>
    <string name="upload">Upload</string>
    <string name="raz">Reset</string>
    <string name="hierarchy">Hierarchy</string>
    <string name="refresh">Refresh</string>
    <string name="download_menu">DOWNLOAD \na form</string>
    <string name="edit_menu">FILL IN   \na form</string>
    <string name="save_menu">FINISH \nmy forms</string>
    <string name="send_menu">My forms \nTO SEND</string>
    <string name="download_action_bar">DOWNLOAD</string>
    <string name="edit">FILL IN</string>
    <string name="my_forms">my forms</string>
    <string name="my_forms_send">My forms</string>
    <string name="finalize">FINISH</string>
    <string name="to_send">TO SEND</string>
    <string name="form">a form</string>
    <string name="help_download">
<![CDATA[
        <strong>Use the demo forms :</strong><br/>
		We offer you some demonstration forms that Makina Corpus have already created specifically for this app. They are available on http://formulaires.makina-corpus.net:80/makinademo server, accessible from the "Settings" menu of the app.<br/><br/><strong>Create your own forms :</strong><br/>
You can also use the Makina Collect App with your own forms that you have created in advance on the Formhub Makina Corpus website (http://formulaires.makina-corpus.net/). Then, you must synchronize the mobile application by modifying the server address (from the Settings menu of the application) to one of your own Formhub Makina Corpus account.<br/>
 ]]>
    </string>
    <string name="help_edit">
<![CDATA[
        This list gives you all the patterns forms that you have downloaded into the app. By clicking on one of them, you can start filling in it. With a long press clic (or by sliding on the left), you can delete a form.<br/>
		
	Makina Collect app has been conceived very user friendly to help you when you need to gather information via forms.<br/><br/><strong>How to move from one question to another?</strong><br/>
		Two options are available : you can use the "Previous" and "Next" buttons at the bottom of the screen or you can just swipe horizontally.<br/><br/>
		
		<strong>How can I change the answers?</strong><br/>
		Any time, via the Hierarchy button, you can access to the summary of all the answers you gave. Clicking on one specific question redirects you directly to it so you can change your answer. At the end of the form, a visualization of all the answers provided is automatically displayed before validation and submission.<br/><br/>
		
		<strong>How can I reset the current form?</strong><br/>
		Any time, the "reset" button available in the eaction bar (the bar at the top of the screen) allows you, in case of error, to erase all the answers already entered and restart the form from the beginning.<br/><br/>
		
		<strong>How can I save my survey during the fill in?</strong><br/>
		The "save" action available in the action bar allows you to save a form any time during the fill in. The form will not be sent to the server but it will be saved as un-finished form with its name, date and time. It will be available again in the list of "Un-finished forms" via the home screen.<br/><br/><strong>How to send the finished forms?</strong>
		Once they are finished, after the last question, the forms will be sent and saved on the Makina Corpus Formhub server.<br/>
		You can choose to send it right after the end of the form or you can choose to save it in the "finished form" section of the app to postpone the sending. (no internet connexion, combined sending,….).<br/>
		If the internet connexion doesn\'t work, the sending of the form will be impossible. It will automatially saved in the "finished form" section of the app.<br/>
	 ]]>
    </string>
    <string name="help_form">
<![CDATA[
        Makina Collect app has been conceived very user friendly to help you when you need to gather information via forms.<br/><br/>
        
        <strong>How to move from one question to another?</strong><br/>
		Two options are available : you can use the "Previous" and "Next" buttons at the bottom of the screen or you can just swipe horizontally.<br/><br/>
		
		<strong>How can I change the answers?</strong><br/>
		Any time, via the Hierarchy button, you can access to the summary of all the answers you gave. Clicking on one specific question redirects you directly to it so you can change your answer. At the end of the form, a visualization of all the answers provided is automatically displayed before validation and submission.<br/><br/>
		
		<strong>How can I reset the current form?</strong><br/>
		Any time, the "reset" button available in the eaction bar (the bar at the top of the screen) allows you, in case of error, to erase all the answers already entered and restart the form from the beginning.<br/><br/>
		
		<strong>How can I save my survey during the fill in?</strong><br/>
		The "save" action available in the action bar allows you to save a form any time during the fill in. The form will not be sent to the server but it will be saved as un-finished form with its name, date and time. It will be available again in the list of "Un-finished forms" via the home screen.<br/><br/>
		
		<strong>How to send the finished forms?</strong><br/>
		Once they are finished, after the last question, the forms will be sent and saved on the Makina Corpus Formhub server.<br/>
		You can choose to send it right after the end of the form or you can choose to save it in the "finished form" section of the app to postpone the sending. (no internet connexion, combined sending,….).<br/>
		If the internet connexion doesn\'t work, the sending of the form will be impossible. It will automatially saved in the "finished form" section of the app.<br/>
		 ]]>
    </string>
    <string name="help_save">
<![CDATA[
        This list regroups all of the un-finished forms. They are descending chronologically ordered.<br/>
		By clicking on one of them, you will be automatically redirected on the summary of this survey.<br/>
		To delete one of these survey, you just have to press long on it or swipe on the left. A popUp essage will display to confirm the deletion.<br/>
		]]>
    </string>
    <string name="help_send">
<![CDATA[
        This list regroups all of the finished form that have not been sent to the server, by choice, or because of a failure in the sending : first ones are labeled “un-finished”, the second one as “sending failure”.<br/>
		The sending box ("finished forms" section) allows you to send one or many forms at the same time.<br/><br/>

		You can delete all the forms you want. You have to do it the same way as in the "finished forms" section.<br/>
		 ]]>
    </string>
    <string name="help_confirmation">Do not show this message again</string>
    <string name="help_title1">Help Download a form</string>
    <string name="help_title2">Help Fill in a form</string>
    <string name="help_title3">Help Finish a form</string>
    <string name="help_title4">Help My forms to send</string>
    <string name="save_description">This form is now finalized.\nYou can change the title.</string>
    <string name="save_form">Save the form</string>
    <string name="no_form_not_finalized">no unfinalized form</string>
    <string name="send_form">Send this form</string>
    <string name="send_form_and_restart">Send this form and restart it</string>
    <string name="checkbox_error">Please select an answer</string>
    <string name="no_form_to_send">No form to send</string>
    <string name="select_all">select all</string>
    <string name="deselect_all">discard selection</string>
    <string name="no_form_selected">No selected form</string>
    <string name="form_selected">1 selected form</string>
    <string name="forms_selected">selected forms</string>
    <string name="no_connexion">No network connection!</string>
    <string name="accept_location">Record Location</string>
    <string name="accuracy">Accuracy</string>
    <string name="activity_not_found">No activity found to handle: %s</string>
    <string name="add_another">Add Group</string>
    <string name="add_another_repeat">Add another \"%s\" group?</string>
    <string name="add_more">Add more</string>
    <string name="add_repeat">Add a new \"%s\" group?</string>
    <string name="add_repeat_no">Do Not Add</string>
    <string name="advance">forward to\nnext\nprompt</string>
    <string name="altitude">Altitude</string>
    <string name="audio_file_error">No audio file was specified.</string>
    <string name="audio_file_invalid">File: %s is not a valid audio file.</string>
    <string name="backup">backward to\nprevious\nprompt</string>
    <string name="barcode_scanner_error">Sorry, Barcode Scanner is not installed!</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_loading_form">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="cancel_saving_form">Cancel</string>
    <string name="cannot_edit_completed_form">This form cannot be edited once it has been marked as complete. It may be encrypted.</string>
    <string name="capture_audio">Record Sound</string>
    <string name="capture_image">Take Picture</string>
    <string name="capture_video">Record Video</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">ODK Password</string>
    <string name="change_server_url">URL</string>
    <string name="change_username">ODK Username</string>
    <string name="clearanswer_confirm">Remove the response to \"%s\"?</string>
    <string name="clear_answer">Remove response</string>
    <string name="clear_answer_ask">Remove This Response?</string>
    <string name="clear_answer_no">Cancel</string>
    <string name="completed_data">Complete (%s)</string>
    <string name="data">Saved Forms</string>
    <string name="data_saved_error">Sorry, form save failed!</string>
    <string name="data_saved_ok">Form successfully saved!</string>
    <string name="view_hierarchy">Go To Prompt</string>
</resources>