<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/actionbar_settings"
        android:orderInCategory="101"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/actionbar_help"
        android:orderInCategory="102"
        android:title="@string/help"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about_us"
        android:icon="@drawable/actionbar_about_us"
        android:orderInCategory="103"
        android:title="@string/about_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/actionbar_exit"
        android:orderInCategory="104"
        android:title="@string/exit"
        app:showAsAction="never" />

</menu>